--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
   </head>
   <body>
     <section class="container">
-      <img class="first-img" src="img/blue.jpeg" alt="" />
-      <img class="second-img" src="img/white.jpeg" alt="" />
-      <img class="third-img" src="img/stand-edit.jpg" alt="" />
-      <p class="clickme" id="clickme">CLICK ME😍</p>
-      <p class="emoji em-1">🌹</p>
+      <img class="first-img" src="img/julnholberton.jpeg" alt="" />
+      <img class="second-img" src="img/julnalx.jpeg" alt="" />
+      <img class="third-img" src="img/julblack.jpeg" alt="" />
+      <p class="clickme" id="clickme">CLICK ME😄</p>
+      <p class="emoji em-1">🙌</p>
+      <p class="emoji em-2">🙌</p>
+      <p class="emoji em-3">🙌</p>
+      <p class="emoji em-4">🙌</p>
+      <p class="emoji em-5">🙌</p>
+      <!-- <p class="emoji em-1">🌹</p>
       <p class="emoji em-2">🌹</p>
       <p class="emoji em-3">🌹</p>
       <p class="emoji em-4">🌹</p>
-      <p class="emoji em-5">🌹</p>
+      <p class="emoji em-5">🌹</p> -->
     </section>
 
     <script>
